working post new medication and get for main app
