# app/openapi.yml
@@ -43,7 +43,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: integer
                 example: 2
         "400":
           description: "invalid input, object invalid"
@@ -56,31 +56,19 @@ components:
       required:
       - name
       - quantity
-      - remaining_days
       - modifier
-      - end_date
       type: object
       properties:
-        id:
-          type: integer
-          example: 2
         name:
           type: string
           example: tylenol
         quantity:
           type: integer
           example: 56
-        remaining_days:
-          type: integer
-          example: 32
         modifier:
           type: number
           format: float
           example: 3.5
-        end_date:
-          type: string
-          format: date
-          example: 2024-03-06
 
     medicine_id:
       required:
